--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,28 +1,49 @@
+html{
+    overflow-y: scroll;
+}
 body{
+    overflow-y: scroll;
     margin: 0;
     font-family: sans-serif;
 }
-
-.center-login-square{
-    width: 400px;
-    height: 500px;
-    margin: auto;
-    margin-top: 5%;
-    opacity: .7;
-    background-color: white;
+.top-menu-bar{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color: #2c3e50;
+    padding: 10px 20px;
+    height: 50px;
+    
 }
 
-.data-square{
-    width: 150px;
-    height: 20px;
+.top-menu-bar .top-inner-menu-bar a{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color: white;
+    padding: 5px 15px;
+    height: 25px;
+    
+}
+
+.center-login-square {
+    width: 400px;
+    height: 400px;
     margin: auto;
-    opacity: .8;
-    background-color: darkgrey;
+    margin-top: 5%;
+    background-color: whitesmoke;
+    border-radius: 20px;
+    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.15);
+    padding: 20px;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
 }
 
 textarea{
     width: 150px;
     height: 20px;
+    margin: auto;
     border: 2px solid #ccc;
     border-radius: 10px;
     padding: 10px;
